--- a/index.html
+++ b/index.html
@@ -330,14 +330,14 @@
               <img src="./assets/phone.png" alt="Phone icon" class="icon" />
               <h2>Phone</h2>
             </div>
-            <h2 class="experience-sub-title">(+123) 456 7890</h2>
+            <h2 class="experience-sub-title">0813 1409 7048</h2>
           </div>
           <div class="details-container color-container">
             <div class="details-icon-container">
               <img src="./assets/email.png" alt="Email icon" class="icon" />
               <h2>Email</h2>
             </div>
-            <h2 class="experience-sub-title">info@example.com</h2>
+            <h2 class="experience-sub-title">mhdarf.dev@gmail.com</h2>
           </div>
         </div>
       </div>
